# tuidal

./: .cspell.json  .editorconfig  .flake8  .gitignore  .project-words.txt  .pyspelling.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  cog.toml  lefthook.yml  pyproject.toml  shell.nix  tuidal.py  tuidal.toml
locales/de/LC_MESSAGES/: base.po  base.po~
src/tuidal/: session.py  stylix_theme.py  tuidal.py
