[tool.black]
line-length = 80
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
# Enable trailing whitespace detection
select = ["W291", "W292", "W293"]

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pip_conf_index_global"

[project]
name = "tuidal"
version = "0.1.0"
description = "Tidal tui player"
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.13"
dependencies = [
  "pyqt5",
  "qt-material",
  "tidalapi",
  "tidal-dl",
  "textual[syntax]",
  "python-mpv",
  "requests",
  "structlog>=25.4.0",
]

[project.scripts]
tuidal = "tuidal.tuidal:main"

[dependency-groups]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "./src/tuidal/tuidal.py"
