[tool.black]
line-length = 80
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
# Enable trailing whitespace detection
select = ["W291", "W292", "W293"]

[tool.basedpyright]
include = ["."]
exclude = ["**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.autoflake]
check = false
imports = ["rich"]
remove-all-unused-imports = true
in-place = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pip_conf_index_global"


[tool.pdm.scripts]
tuidal = "textual run --dev ./src/tuidal/tuidal.py"
console = "textual console -x SYSTEM -x DEBUG -x EVENT"

[project]
name = "tuidal"
version = "0.3.0"
description = "Tidal tui player"
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.13"
dependencies = [
  "tidalapi",
  "textual[syntax]",
  "structlog>=25.4.0",
  "better-exceptions>=0.3.3",
  "mpv>=1.0.7",
]

[project.scripts]
tuidal = "tuidal.tuidal:main"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

